# run_app_dj

./: db.sqlite3  pyproject.toml
run_app/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
run_app/migrations/: 0001_initial.py
run_project/: asgi.py  settings.py  urls.py  wsgi.py
